--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=SafetyIo
 APP_ENV=local
 APP_KEY=base64:T0IG7hXnAkf+LGDlGsewrenjTuBvurYcuPMh6x12cp4=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://safetyio.net
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
