--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=SafetyIo
 APP_ENV=local
 APP_KEY=base64:T0IG7hXnAkf+LGDlGsewrenjTuBvurYcuPMh6x12cp4=
 APP_DEBUG=true
-APP_URL=http://safetyio.net
+APP_URL=https://safetyio.net
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
